--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -19,7 +19,7 @@
     margin: auto;
     display: flex;">
     <div class="bg-dark bg-opacity-75 rounded ">
-      <form class="needs-validation" action="/registration" th:action="@{/registration}" th:object="${user}" method="post" enctype="multipart/form-data">
+      <form  action="/registration" th:action="@{/registration}" th:object="${user}" method="post" enctype="multipart/form-data">
         <div class="row g-3">
 
           <div class="col-sm-6 mt-5 mb-3">
@@ -35,7 +35,7 @@
           </div>
 
           <div class="col-5">
-            <label class="col-5 mb-3 form-label">Аватар: </label>
+            <label class="col-5 mb-3 form-label form-label">Аватар: </label>
             <input type="file" accept=".png, .jpg, .jpeg" name="file">
           </div>
 
